kubernetes/manifests/prod/cilium/Namespace-cilium-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/part-of: cilium
  name: cilium-secrets
