kubernetes/manifests/prod/cilium/CiliumClusterwideNetworkPolicy-allow-kube-dns-cluster-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-kube-dns-cluster-ingress
spec:
  description: Policy for ingress allow to kube-dns from all Cilium managed endpoints in the cluster.
  endpointSelector:
    matchLabels:
      k8s-app: kube-dns
      k8s:io.kubernetes.pod.namespace: kube-system
  ingress:
    - fromEndpoints:
        - {}
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
